# mcp_a2a_upskill

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
a2a_acp/: README.md  client.py  health_agent.py  hospital_agent_mcp.py  mcpserver.py  rag_agent.py
a2a_acp/db/: chroma.sqlite3
a2a_http/: README.md  a2a.py  inventory_agent.py  support_agent.py
mcp_project/: README.md  mcp_chatbot.py  research_server.py
